--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node ./dist/server/entry.mjs"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.0",
     "astro": "^5.14.7"
   }
 }
